@@ -5,9 +5,10 @@
 # document (ne.pdf).
 #
 
-INFODOCS=ne.info.gz ne.info-1.gz ne.info-2.gz ne.info-3.gz ne.info-4.gz
+INFODOCS=ne.info.gz
+INFODOCSNUM=ne.info-1.gz ne.info-2.gz ne.info-3.gz ne.info-4.gz
 
-DOCS=ne.txt $(INFODOCS) html/index.html ne.dvi ne.pdf
+DOCS=$(INFODOCS) ne.txt html/index.html ne.dvi ne.pdf
 
 all: $(DOCS)
 
@@ -20,11 +21,13 @@ version.texinfo:
 ne.txt: ne.texinfo version.texinfo
 	makeinfo --plaintext --no-headers ne.texinfo -o ne.txt
 	sed -i -e "s/\`/'/g" ne.txt
+	sed -i -e "s/''''/'\`''/g" ne.txt
 	sed -i -e "s/'ne'/ne/g" ne.txt
 
 $(INFODOCS): ne.texinfo version.texinfo
 	makeinfo ne.texinfo
 	sed -i -e "s/\`/'/g" ne.info
+	sed -i -e "s/''''/'\`''/g" ne.info
 	sed -i -e "s/'ne'/ne/g" ne.info
 	rm -f ne.info*gz
 	gzip -9 ne.info*
@@ -39,8 +42,9 @@ html/index.html: ne.texinfo version.texinfo
 	-rm -fr html
 	makeinfo --html -o html ne.texinfo
 	for i in html/*html; do sed -i -e "s/\`/'/g" $$i; done
+	for i in html/*html; do sed -i -e "s/''''/'\`''/g" $$i; done
 	for i in html/*html; do sed -i -e "s/'ne'/ne/g" $$i; done
 
 clean:
-	rm -f ne.txt ne.info* ne.ps ne.pdf
+	rm -f ne.txt ne.info* ne.ps ne.pdf ne.dvi
 	rm -rf html/
